[tool.poetry]
name = "unifi-discovery"
version = "1.4.0"
description = "Discover Unifi Devices"
authors = ["J. Nick Koston <nick@koston.org>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/uilibs/unifi-discovery"
documentation = "https://unifi-discovery.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.14",
]
packages = [
    { include = "unifi_discovery" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/uilibs/unifi-discovery/issues"
"Changelog" = "https://unifi-discovery.readthedocs.io/changelog.html"

[tool.poetry.scripts]
unifi-discovery = "unifi_discovery.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"

# Documentation Dependencies
Sphinx = {version = ">=5,<9", optional = true}
sphinx-rtd-theme = {version = ">=1,<4", optional = true}
myst-parser = {version = ">=0.17.0", optional = true}
pyroute2 = ">=0.6.5"
aiohttp = ">=3.8.0"

[tool.poetry.extras]
docs = [
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.poetry.dev-dependencies]
black = "^25.9"
flake8 = "^7.2.0"
isort = "^8.0.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pyupgrade = "^3.20.0"
tox = "^4.26.0"
pytest-asyncio = "^0.17.2"
aioresponses = "^0.7.8"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["unifi_discovery/__init__.py:__version__"]
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=unifi_discovery --cov-report=term-missing:skip-covered"

[tool.coverage.run]
branch = true
omit = [
    "unifi_discovery/__main__.py",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
ignore = [
    "S101", # use of assert
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public module
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "D400", # First line should end with a period
    "D401", # First line of docstring should be in imperative mood
    "D205", # 1 blank line required between summary line and description
    "D415", # First line should end with a period, question mark, or exclamation point
    "D417", # Missing argument descriptions in the docstring
    "E501", # Line too long
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "B008", # Do not perform function call
    "S110", # `try`-`except`-`pass` detected, consider logging the exception
    "D106", # Missing docstring in public nested class
    "UP007", # typer needs Optional syntax
    "S603", #  check for execution of untrusted input
    "PERF203", # too many to fix right now
    "PLR2004", # Magic value used in comparison
    "PLR0913", # Too many arguments to function call
    "PLW1641", # Object does not implement __hash__ method
]
select = [
    "B",   # flake8-bugbear
    "D",   # flake8-docstrings
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit
    "F",   # pyflake
    "FURB", # refurb rules
    "E",   # pycodestyle
    "W",   # pycodestyle
    "UP",  # pyupgrade
    "I",   # isort
    "PERF", # performance
    "PL",  # pylint
    "RET", # return rules
    "RUF", # ruff specific
    "SIM", # simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "S101",
    "S104",
    "PLR0911",
    "PLR0912",
    "PLR0915",
]
"setup.py" = ["D100"]
"conftest.py" = ["D100"]
"docs/conf.py" = ["D100"]

[tool.ruff.lint.isort]
known-first-party = ["unifi_discovery", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
